--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My map</title>
+        <title>My map: Eire, Isle of Man, and Great Britain</title>
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>
@@ -16,13 +16,13 @@
 
 var map = L.map('mymap', {
     center: [53.4263629,-8.1429686],
-    zoom: 7
+    zoom: 8
 });
 
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: 'Map tiles by Stamen Design, under CC BY 4.0. Data by OpenStreetMap, under ODbL.',
-    maxZoom: 10,
-    minZoom: 4
+    maxZoom: 8,
+    minZoom: 1
 }).addTo(map);
 
 </script>
