--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ var map = L.map('mymap', {
 });
 
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'Map tiles by Stamen Design, under CC BY 4.0. Data by OpenStreetMap, under ODbL.',
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+});,
     maxZoom: 10,
     minZoom: 4
 }).addTo(map);
