--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ var map = L.map('mymap', {
 });
 
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-});,
+    attribution: '<a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     maxZoom: 10,
     minZoom: 4
 }).addTo(map);
