--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My map</title>
+        <title>My map: Eire, Isle of Man, and Great Britain</title>
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>
@@ -18,7 +18,7 @@ var map = L.map('mymap', {
     center: [53.4263629,-8.1429686],
     zoom: 7
 });
-
+  <!-- Attribution was only to OpenStreetMap when sourced -->
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: 'Data by OpenStreetMap.',
     maxZoom: 10,
